Edited wiki page through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -8,8 +8,8 @@
 
 MarkUtils features:
   * Models:
-    # [ComboBoxModel]
-    # [ObjectTableModel]
+    * [ComboBoxModel]
+    * [ObjectTableModel]
   * [Binder]
 
 == Help Us ==
