Edited wiki page through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -11,6 +11,7 @@ MarkUtils features:
     * [ComboBoxModel]
     * [ObjectTableModel]
   * [Binder]
+  * [ConfigurationUtils]
 
 == Help Us ==
   * See the [TODO]
