Edited wiki page through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -12,6 +12,7 @@ MarkUtils features:
     * [ObjectTableModel]
   * [Binder]
   * [ConfigurationUtils]
+  * [ActionManager]
 
 == Help Us ==
   * See the [TODO]
