--- a/wiki/Expression.wiki
+++ b/wiki/Expression.wiki
@@ -27,7 +27,8 @@ cos, sin, tan, acos, asin, atan, sqrt, sqr, log, exp, floor, ceil, abs e neg
 
 To use, write on your expressions with functionName(value).
 
-Something like: cos(10)*tan(2*2)+log(1)
+Something like: {{{cos(10)*tan(2*2)+log(1)}}}
 
 And theres a special function 'rnd' with returns a random number.
+
 Eg. rnd(42), returns a value between 0 and 41.99
