Edited wiki page Introduction through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -16,7 +16,7 @@ MarkUtils features:
   * [Expression] - Solve math formulas as Strings
   * Collections:
     * [CollectionsUtil]
-    * [AggregateFunction]
+    * [AggregateFunctions]
 
 == Help Us ==
   * See the [ToDoList]
